Fix incorrect alignment

--- a/ui/usfm-grammar.css
+++ b/ui/usfm-grammar.css
@@ -286,7 +286,7 @@ body {
     }
 
     .box2-content {
-      float: right;
+      /* float: right; */
       height: 645px;
 
     }
@@ -329,7 +329,7 @@ body {
     }
 
     .box2-content {
-      float: right;
+      /* float: right; */
       height: 740px;
 
     }
